# GuessDraw

./: CMakeLists.txt  README.md  d.txt  main.cpp  todo
src/: main.cpp
src/core/: config.cpp  drawing.cpp  drawing.h  globals.h
src/ui/: hotkeys.cpp  hotkeys.h  screenshot.cpp  screenshot.h  settings.cpp  settings.h  tray.cpp  tray.h
